crates/tk/tests/snapshots/scenarios__help_plan_clear.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"plan {subcommand} --help\"))"
---
Remove all membership, including unfinished Tickets; keep the Tickets

Usage: tk plan clear

Options:
  -h, --help  Print help
