crates/tk/tests/snapshots/scenarios__help_plan_remove.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"plan {subcommand} --help\"))"
---
Remove Tickets from the Plan without changing their state

Usage: tk plan remove <ID>...

Arguments:
  <ID>...  Ticket Display IDs or Aliases

Options:
  -h, --help  Print help
