crates/tk/tests/snapshots/scenarios__help_promote_retry.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(\"promote retry --help\")"
---
Explicitly risk creating the Backend object again

Usage: tk promote retry <ID>

Arguments:
  <ID>  Display ID or Alias of the Pending Promotion

Options:
  -h, --help  Print help
