crates/tk/tests/snapshots/scenarios__help_show.snap
---
source: crates/tk/tests/scenarios.rs
expression: "p.run(&format!(\"{command} --help\"))"
---
Render one Ticket or Epic with current state

Usage: tk show <ID>

Arguments:
  <ID>  Display ID or Alias of the Ticket or Epic to render

Options:
  -h, --help  Print help
